--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet/less" href="css/style.less" type="text/css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
     <script src="js/less.min.js" type="text/javascript"></script> 
     <title>Document</title>
 </head>
@@ -19,6 +20,48 @@
 				<li><a href="login.html" data-hover="Login">Login</a></li>
 				<li><a href="contact.html" data-hover="CONTACT">Contact</a></li>
             </ul>
+            <div class="search-box">
+                <div class="b-search">
+                    <form>
+                        <input type="text" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <div class="full">
+        <div class="col-md-3 top-nav">
+            <div class="logo">
+                <a href="index.html"><h1>Blogger</h1></a>
+            </div>
+            <div class="top-menu">
+                <span class="menu"> </span>
+                <ul class="cl-effect-16">
+                    <li><a class="active" href="index.html" data-hover="HOME">Home</a></li>
+                    <li><a href="about.html" data-hover="About">About</a></li>
+                    <li><a href="grid.html" data-hover="Grids">Grids</a></li>
+                    <li><a href="services.html" data-hover="Services">Services</a></li>
+                    <li><a href="gallery.html" data-hover="Gallery">Gallery</a></li>
+                    <li><a href="contact.html" data-hover="CONTACT">Contact</a></li>
+                </ul>
+                <!-- script-for-nav -->
+                <!--<script>-->
+                    <!--$( "span.menu" ).click(function() {-->
+                        <!--$( ".top-menu ul" ).slideToggle(300, function() {-->
+                            <!--// Animation complete.-->
+                        <!--});-->
+                    <!--});-->
+                <!--</script>-->
+                <!-- script-for-nav -->
+                <ul class="side-icons">
+                    <li><a class="fb" href="#"></a></li>
+                    <li><a class="twitt" href="#"></a></li>
+                    <li><a class="goog" href="#"></a></li>
+                    <li><a class="drib" href="#"></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
