top news finished

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!--banner-section-->
         <div class="banner-section">
             <h3 class="tittle">General <i class="glyphicon glyphicon-picture"></i></h3>
-            <div class="banner">
+            <div class="banner col-md-12">
                 <div  id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators carousel-indicators-position">
